--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
-  "name": "tercera_entrega_brian",
-  "version": "1.0.0",
-  "description": "Tercera entrega NodeJS con MongoDB y Moongose",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Brian-5021/entrega3.git"
-  },
-  "keywords": [
-    "NODEJS",
-    "MONGO",
-    "NPM"
-  ],
-  "author": "Brian Valdés",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Brian-5021/entrega3/issues"
-  },
-  "homepage": "https://github.com/Brian-5021/entrega3#readme",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^5.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "fs": "*",
-    "hbs": "^4.1.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.8",
-    "mongoose-unique-validator": "^2.0.3",
-    "node-localstorage": "^2.1.6"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+    "name": "tercera_entrega_brian",
+    "version": "1.0.0",
+    "description": "Tercera entrega NodeJS con MongoDB y Moongose",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src/app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Brian-5021/entrega3.git"
+    },
+    "keywords": [
+        "NODEJS",
+        "MONGO",
+        "NPM"
+    ],
+    "author": "Brian Valdés",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Brian-5021/entrega3/issues"
+    },
+    "homepage": "https://github.com/Brian-5021/entrega3#readme",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.19.0",
+        "bootstrap": "^5.0.0",
+        "express": "^4.17.1",
+        "express-session": "^1.17.1",
+        "fs": "*",
+        "hbs": "^4.1.2",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.12.8",
+        "mongoose-unique-validator": "^2.0.3",
+        "node-localstorage": "^2.1.6"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    }
 }
