--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
         "start": "node src/app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
+
+    "engines": {
+        "node": ">=8.0.0 <11.0.0"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Brian-5021/entrega3.git"
@@ -16,6 +20,7 @@
         "MONGO",
         "NPM"
     ],
+
     "author": "Brian Valdés",
     "license": "ISC",
     "bugs": {
