--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
 
     "engines": {
-        "node": ">=8.0.0 <11.0.0"
+        "node": "~ 1.0.20"
     },
     "repository": {
         "type": "git",
