--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
 
     "engines": {
-        "node": "~ 1.0.20"
+        "node": "6.11.1"
     },
     "repository": {
         "type": "git",
