--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     },
     "homepage": "https://github.com/Brian-5021/entrega3#readme",
     "dependencies": {
-        "bcrypt": "^5.0.1",
+        "bcrypt-nodejs": "^5.0.1",
         "body-parser": "^1.19.0",
         "bootstrap": "^5.0.0",
         "express": "^4.17.1",
